[tool.poetry]
name = "arch-bot-backgithubio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "arch_bot_backgithubio"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.6"
django-cors-headers = "4.3.1"
djangorestframework = "3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
